Day1 Tasks Completed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Omkar Gore</h1>
     <br />
-    <p>cool stuff</p>
+
+    <p><em>Student at Vishwakarma Institute of Technology, Pune</em></p>
+    <p>I am a web developer and I love coffee and I like to code</p>
+
+    <hr />
+    <h3>Education</h3>
+    <ul>
+      <li><strong>Pursuing</strong></li>
+      <p>Bachelor of Technology at Vishwakarma Institute of Technology</p>
+      <li><strong>Completed</strong></li>
+      <p>HSC at Samyak Drishti Jr College Mulawa</p>
+    </ul>
   </body>
 </html>
