Day 2- Added Images, Links,Lists, Anchors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <img
+      height="333"
+      width="250"
+      src="Images/Omkar.jpeg"
+      alt="Omkar Profile Picture"
+    />
     <h1>Omkar Gore</h1>
     <br />
 
@@ -18,8 +24,34 @@
     <ul>
       <li><strong>Pursuing</strong></li>
       <p>Bachelor of Technology at Vishwakarma Institute of Technology</p>
+      <h4>Subjects Studies in the course are:</h4>
+      <ol type="1">
+        <li>Operating Systems</li>
+        <li>Computer Networks</li>
+        <li>Cyber Security</li>
+        <li>Object Oriented Programming</li>
+      </ol>
+      <br />
+      <br />
       <li><strong>Completed</strong></li>
-      <p>HSC at Samyak Drishti Jr College Mulawa</p>
+      <ol type="1">
+        <li>HSC at Samyak Drishti Jr College, Mulawa</li>
+        <li>SSC at Jet Kids International School, Pusad</li>
+      </ol>
     </ul>
+
+    <h3>My Social Media Handles are:</h3>
+    <ul>
+      <li>
+        <a href="https://linkedin.com/in/omkar-gore-83135119a">LinkedIn</a>
+      </li>
+      <li><a href="https://github.com/OM-VIT">GitHub</a></li>
+      <li>
+        <a href="https://auth.geeksforgeeks.org/user/omkargore19/"
+          >GeekForGeeks</a
+        >
+      </li>
+    </ul>
+    <h3><a href="contactme.html">Contact Me Here</a></h3>
   </body>
 </html>
