Day 3- Learned Tables. Completed table challenge by using colspan and rowspan.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>index</title>
   </head>
   <body>
     <img
-      height="333"
-      width="250"
-      src="Images/Omkar.jpeg"
+      src="https://avatars.githubusercontent.com/u/70906747?s=400&u=40c08dec212971cd0d2ad3fdb842130dd8fee21a&v=4"
       alt="Omkar Profile Picture"
     />
     <h1>Omkar Gore</h1>
@@ -52,6 +50,54 @@
         >
       </li>
     </ul>
+
+    <h4>Work Experience at Team Griffin</h4>
+    <table border="2">
+      <thead>
+        <tr>
+          <th>Year</th>
+          <th>Position</th>
+        </tr>
+      </thead>
+      <tr>
+        <td>2019</td>
+        <td rowspan="2">Crew Member</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>Manufacturing Head</td>
+      </tr>
+      <tr>
+        <td>2022</td>
+        <td>Captain</td>
+      </tr>
+    </table>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>Java</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Python</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>SQL</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>GitHub</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Docker</td>
+        <td>⭐⭐</td>
+      </tr>
+    </table>
     <h3><a href="contactme.html">Contact Me Here</a></h3>
   </body>
 </html>
