Day-4 Learned Basic Forms and Post method to open email on form submit button

--- a/contactme.html
+++ b/contactme.html
@@ -12,5 +12,23 @@
     <p>1600 Amphitheatre Parkway Mountain View, CA 94043</p>
     <h3>Phone</h3>
     <p>1-800-419-0157</p>
+
+    <form
+      action="mailto:omkar.gore19@vit.edu"
+      method="post"
+      enctype="text/plain"
+    >
+      <label for="">Name</label>
+      <input type="text" name="yourName" />
+      <br />
+      <label for="">Email</label>
+      <input type="email" name="YourEmail" id="" />
+      <br />
+      <label for="">Message</label>
+      <br />
+      <textarea name="YourMessage" id="" cols="30" rows="10"></textarea>
+      <br />
+      <input type="submit" />
+    </form>
   </body>
 </html>
